etc/kubernetes/manifests/hasher-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: hasher
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: hasher
  template: 
    metadata: 
      labels: 
        app: hasher
    spec: 
      containers:
        -
          image: academiaonline/dca-dockercoins:latest-hasher
          name: hasher
          ports: 
            -
              containerPort: 8080
              protocol: TCP
