etc/kubernetes/manifests/redis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: redis
  template: 
    metadata: 
      labels: 
        app: redis
    spec: 
      containers:
        -
          image: redis:alpine
          name: redis
          ports: 
            -
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            -
              mountPath: /data
              name: redis
      volumes:
        - 
          name: redis
          emptyDir: {}
