etc/kubernetes/manifests/webui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: webui
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: webui
  template: 
    metadata: 
      labels: 
        app: webui
    spec: 
      containers:
        -
          image: academiaonline/dca-dockercoins:latest-webui
          name: webui
          ports: 
            -
              containerPort: 8080
              protocol: TCP
