etc/kubernetes/manifests/worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: worker
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: worker
  template: 
    metadata: 
      labels: 
        app: worker
    spec: 
      containers:
        -
          image: academiaonline/dca-dockercoins:latest-worker
          name: worker
