etc/kubernetes/manifests/webui-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: webui
spec: 
  ports:
    -
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector: 
    app: webui
  type: ClusterIP
