etc/kubernetes/manifests/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: redis-netpol
spec:
  ingress: 
    - 
      from: 
        - 
          podSelector: 
            matchLabels: 
              app: webui
              app: worker
      ports: 
        -
          port: 6379
          protocol: TCP
  podSelector:
    matchLabels:  
      app: redis
  policyTypes:
    - Ingress
